--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,23 @@
   --faq-pad-outer: 7vw;
 }
 
+
 /* General Styles  */
 
+.loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #C271FF;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 .body {
   font-family: var(--font-family-1);
 }
