--- a/styles.css
+++ b/styles.css
@@ -206,96 +206,96 @@
 .quotes {
   height: 392px;
   background-color: var(--main-color);
-}
-
-.quotes .carousel-item img {
-  width: 160px;
-  border-radius: 75px;
-  margin-left: 10px;
-}
-
-.quote-text {
-  padding-left: 53px;
-}
-
-.quotes .row [class*="col"] {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.quote-text p {
-  font-size: 22px;
-  line-height: 34px;
-  margin-bottom: 22px;
-}
-
-.quote-text h4 {
-  font-size: 22px;
-}
-.quote-text span {
-  font-style: italic;
-  font-size: 22px;
-}
-
-.carousel-control-prev img,
-.carousel-control-next img {
-  width: 30px;
-}
-
-.quotes .carousel-control-prev.arrow-left {
-  padding-right: var(--quotes-arrows-pad);
-}
-
-.quotes .carousel-control-next.arrow-right {
-  padding-left: var(--quotes-arrows-pad);
-}
-
-@media screen and (max-width: 991px) {
-  .quotes .carousel-item img {
-    margin-left: 80px;
   }
+
+  .quotes .carousel-item img {
+    width: 160px;
+    border-radius: 75px;
+    margin-left: 10px;
+  }
+
   .quote-text {
-    padding-left: 43px;
+    padding-left: 53px;
   }
-}
 
-@media screen and (max-width: 767px) {
-  .quotes .carousel-item img {
-    margin-left: 40px;
+  .quotes .row [class*="col"] {
+    padding-left: 0;
+    padding-right: 0;
   }
-}
 
-@media screen and (max-width: 575px) {
-  :root {
-    --arrow-move-y: 40%;
-    --arrow-move-x: 13px;
+  .quote-text p {
+    font-size: 22px;
+    line-height: 34px;
+    margin-bottom: 22px;
   }
-  .quotes {
-    height: auto;
+
+  .quote-text h4 {
+    font-size: 22px;
   }
-  .quotes .carousel-item img {
-    margin: 90px auto 0 auto;
-    padding-bottom: 10px;
+  .newtitle {
+    font-style: italic;
+    font-size: 22px;
   }
-  .quotes .carousel-item .quote-text {
-    padding-bottom: 103px;
+
+  .carousel-control-prev img,
+  .carousel-control-next img {
+    width: 30px;
   }
 
   .quotes .carousel-control-prev.arrow-left {
-    bottom: var(--arrow-move-y);
-    left: var(--arrow-move-x);
+    padding-right: var(--quotes-arrows-pad);
   }
 
   .quotes .carousel-control-next.arrow-right {
-    bottom: var(--arrow-move-y);
-    right: var(--arrow-move-x);
+    padding-left: var(--quotes-arrows-pad);
   }
 
-  .quote-text {
-    padding: 0px;
-    padding-top: 24px;
+  @media screen and (max-width: 991px) {
+    .quotes .carousel-item img {
+      margin-left: 80px;
+    }
+    .quote-text {
+      padding-left: 43px;
+    }
   }
-}
+
+  @media screen and (max-width: 767px) {
+    .quotes .carousel-item img {
+      margin-left: 40px;
+    }
+  }
+
+  @media screen and (max-width: 575px) {
+    :root {
+      --arrow-move-y: 40%;
+      --arrow-move-x: 13px;
+    }
+    .quotes {
+      height: auto;
+    }
+    .quotes .carousel-item img {
+      margin: 90px auto 0 auto;
+      padding-bottom: 10px;
+    }
+    .quotes .carousel-item .quote-text {
+      padding-bottom: 103px;
+    }
+
+    .quotes .carousel-control-prev.arrow-left {
+      bottom: var(--arrow-move-y);
+      left: var(--arrow-move-x);
+    }
+
+    .quotes .carousel-control-next.arrow-right {
+      bottom: var(--arrow-move-y);
+      right: var(--arrow-move-x);
+    }
+
+    .quote-text {
+      padding: 0px;
+      padding-top: 24px;
+    }
+  }
 
 /* POPULAR SECTION  */
 
